Criei título, cabeçalho e texto inicial

--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!doctype html>
 <html>
 	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<title>Home</title>
 	</head>
 	<body>
-		Minha homepage!
+		<h1>Minha homepage</h1>
+		<p>Página para apresentação dos meus repositórios de projetos
+			e artigos.
+		</p>
 	</body>
 </html>
